--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,6 +4,7 @@
 
 body {
     @apply bg-slate-300;
+    @apply text-slate-900;
     @apply dark:bg-slate-900;
-    @apply dark:text-slate-400;
+    @apply dark:text-slate-50;
 }
